# ML-MIX

./: .buildinfo  .gitignore  .gitmodules  CITATION.cff  LICENSE  Manifest.toml  Project.toml  README.md  examples.html  genindex.html  index.html  objects.inv  overview.html  requirements.txt  search.html  searchindex.js  setup.html
.github/workflows/: ci.yml  docs.yml
LAMMPS_plugin/: CMakeLists.txt  arg_store.cpp  arg_store.h  args_manager.cpp  args_manager.h  fix_langevin_mlml.cpp  fix_langevin_mlml.h  fix_mlml.cpp  fix_mlml.h  hybridoverlaymlmlplugin.cpp  install.sh  langevinmlmlplugin.cpp  mlmlplugin.cpp  pair_hybrid_overlay_mlml.cpp  pair_hybrid_overlay_mlml.h
LAMMPS_plugin/cmake/: CMakeLists.txt
LAMMPS_plugin/cmake_kokkos/: CMakeLists.txt
LAMMPS_plugin/cmake_kokkos/Modules/: FindLAMMPSTools.cmake
LAMMPS_plugin/src/: CMakeLists.txt  fix_mlml.cpp  fix_mlml.h  hybridoverlaymlmlplugin.cpp  langevinmlmlplugin.cpp  mlmlplugin.cpp  pair_eam_fs_mlml.cpp  pair_eam_fs_mlml.h  pair_eam_mlml.cpp  pair_eam_mlml.h  pair_hybrid_overlay_mlml.cpp  pair_hybrid_overlay_mlml.h
LAMMPS_plugin/src/KOKKOS/: fix_mlml_kokkos.cpp  fix_mlml_kokkos.h  mlmlpluginkokkos.cpp  pair_hybrid_overlay_mlml_kokkos.cpp  pair_hybrid_overlay_mlml_kokkos.h
_sources/: index.rst.txt  setup.rst.txt
_sources/commands/: fix_langevin_mlml.rst.txt  fix_mlml.rst.txt  pair_hybrid_overlay_mlml.rst.txt
_sources/potential_fitting/: constrained_linear_fit.rst.txt
ancillary_studies/constrained_fitting_impact/: README.md
ancillary_studies/constrained_fitting_impact/scripts/: gen_structs.py  plot_strain_error.py  relax_struct.py
ancillary_studies/energy_conservation/: README.md
ancillary_studies/energy_conservation/scripts/: find_energies.py  fixed_bond_MD.py  plot_energy_flux_potential_type.py  plot_energy_flux_smooth_mixing.py  plot_pots_seperately_no_normalisation.py  plot_pots_seperately_normalised.py
ancillary_studies/expensive_potential_fit_scripts/: README.md
ancillary_studies/expensive_potential_fit_scripts/Fe/: acefit.jl
ancillary_studies/expensive_potential_fit_scripts/HeW/: acefit.jl
ancillary_studies/speedup_testing/: README.md
ancillary_studies/speedup_testing/scripts/: build_structs_Fe.py  build_structs_Si.py  build_structs_W.py  collect_all_data.py  (+5 more)
build_scripts/: example_lammps_build_script.sh  example_lammps_build_script_kokkos.sh  example_plugin_build_script.sh
case_studies/Fe_dumbbell_diffusion/: README.md  params.py
case_studies/He_diffusion_in_W/: README.md  params.py
case_studies/Si_stretched_bond/: README.md
case_studies/Si_vacancy_NEB/: README.md
case_studies/W_He_implantation/: README.md
case_studies/W_dislocation_glide/: README.md
commands/: fix_langevin_mlml.html  fix_mlml.html  index.html  pair_hybrid_overlay_mlml.html
docs/source/: conf.py  examples.rst  overview.rst  setup.rst
examples/: example_lammps_build_script.sh
mix-on-the-fly/: fit_ace_otf.jl  gen_blank_ace.jl  modify_dump_otf.py
potential_fitting/: README.md  constrained_linear_fit.html  examples.html  index.html
potential_fitting/scripts/: fit_ACE.jl  fit_UF3.py  gen_HeW_uf3.py  generate_Ah.py  generate_As.py  test_elastic_constants.py
simple_examples/: README.md
simple_examples/Fe_dumbbell_MD/: fe_dumbell_16.lj
simple_examples/Si_kokkos/: data.in  si_kokkos_input_with_comments.lammps
simple_examples/Si_vacancy_relax/: unrelaxed_vacancy_small.data
tests/: README.md  W_He_input_16_unrelaxed.xyz  test_fix.py  test_force_zero.py  test_hysteresis_lammps.py  test_on_the_fly_data_process.py  test_on_the_fly_fit.py  test_potentials.py
tests/potentials/: load_potentials.py
tests/shared/: build_regions.py  build_struct.py  evaluate_potentials.py  set_up_lammps.py  write_results.py
utils/: global_plot_settings.py  utils.py
(+206 files in other folders)
